# LabTrust-Gym

./: .env  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  _smoke_test_results.json  _tmp_out_phase2.json  aliases_v0.1.yaml  bench_smoke_TaskA.json  bench_smoke_TaskB.json  bench_smoke_TaskC.json  dual_approval_policy.v0.1.yaml  e501_report.txt  emits_validator.py  emits_vocab.v0.1.yaml  equipment_registry_v0.1.yaml  golden_runner.py  golden_scenarios.v0.1.yaml  invariant_registry.v1.0.tokens.yaml  invariant_registry_v1.0.yaml  mkdocs.yml  out.json  policy_pack_hsl_blood_sciences_v0.1.yaml  pyproject.toml  reason_code_registry.v0.1.yaml  results.json  risk_register_bundle.v0.1.json  runner_output_contract.v0.1.schema.json  runtime_enforcement_api.yaml  test_catalogue.schema.json  test_catalogue.schema.v0.1.json  test_catalogue_seed.v0.1.json  (+3 more)
SECURITY/: deps_inventory_runtime.json
benchmarks/: baseline_registry.v0.1.yaml
demo_video_out/: DEMO_RESULTS_REPORT.md  LOVABLE_SETUP.md  build_viewer_data_latest.ps1  throughput_compare_results.json
det_taskg/: determinism_report.json  determinism_report.md
det_whca/: determinism_report.json  determinism_report.md
docs/: AUDIT_COMMANDS.md  CONTRACTS.md  CURRENT_STATE_AND_PRIORITIES.md  FORKER_GUIDE.md  GETTING_STARTED_FORKER.md  IMPROVEMENTS_BEFORE_ONLINE.md  MODULAR_FORK_ROADMAP.md  PAPER_CLAIMS.md  SOTA_ROADMAP.md  STATUS.md  architecture.md  benchmark_card.md  benchmark_results_pipeline.md  benchmarking_plan.md  benchmarks.md  build_your_own_agent.md  ci.md  cli_contract.md  contributing.md  coordination_benchmark_card.md  coordination_done_checklist.md  coordination_method_contract.md  coordination_methods.md  coordination_methods_audit.md  coordination_policy.md  coordination_scale.md  coordination_studies.md  deployment_hardening.md  diagrams.md  enforcement.md  evidence_verification.md  example_experiments.md  extension_development.md  fhir_export.md  frozen_contracts.md  howto_add_coordination_method.md  howto_add_injection.md  howto_security_gate_failures.md  howto_selection_policy.md  implementation_verification.md  (+43 more)
examples/: agent_contract_demo.py  external_agent_demo.py  llm_agent_mock_demo.py  minimal_random_policy_agent.py  ppo_train_config.example.json  quick_eval.ipynb  scripted_ops_agent.py  scripted_runner_agent.py
examples/coord_method_example/: README.md  pyproject.toml
examples/coord_method_example/src/example_coord_plugin/: __init__.py  method.py
examples/extension_example/: README.md  pyproject.toml
examples/extension_example/src/example_plugin/: __init__.py  tasks.py
pack_llm_out/: PACK_SUMMARY.md  live_evaluation_metadata.json  pack_manifest.json
pack_llm_out_live/: PACK_SUMMARY.md  live_evaluation_metadata.json  pack_manifest.json
pack_run_hospital_lab/: COORDINATION_DECISION.md  COORDINATION_DECISION.v0.1.json  LAB_COORDINATION_REPORT.md  SECURITY_REPORT.md  pack_gate.md  pack_summary.csv
pack_run_hospital_lab_smoke/: pack_gate.md  pack_summary.csv
pack_run_minimal/: pack_gate.md  pack_summary.csv
paper/: README.md
policy/: capabilities.v0.1.yaml  coordination_identity_policy.v0.1.yaml  memory_policy.v0.1.yaml  state_tool_capability_map.v0.1.yaml  tool_boundary_policy.v0.1.yaml  tool_registry.v0.1.yaml
quick_eval_20260203_074635/: TaskA.json  TaskD.json  TaskE.json  summary.md
risk_register_out/: RISK_REGISTER_BUNDLE.v0.1.json
risk_register_reviewer_out/: RISK_REGISTER_BUNDLE.v0.1.json
runs/: taska_full.json  taska_smoke.json  taska_smoke_test.json  taskb_full.json  taskc_full.json  taskd_full.json  taske_full.json  taskf_full.json  taskg_full.json  taskg_smoke.json  taskh_full.json  taskh_smoke.json
scripts/: benchmark_suite.py  build_benchmark_report.py  build_episode_bundle.py  build_release_fixture.ps1  build_release_fixture.sh  build_repro.sh  build_viewer_data.sh  build_viewer_data_from_release.sh  check_llm_attacker_regression.py  check_llm_backends_live.py  ci_e2e_artifacts_chain.sh  compare_baseline_summary.py  extract_paper_claims_snapshot.py  forker_quickstart.ps1  forker_quickstart.sh  gcp_vm_bootstrap.sh  generate_required_bench_plan.py  hospital_lab_full_pipeline_config.yaml  normalize_release_fixture_manifests.py  preflight_prime_for_openhands_swebench.py  publish_baseline_artifact.ps1  publish_baseline_artifact.sh  quickstart_paper_v0.1.ps1  quickstart_paper_v0.1.sh  quickstart_paper_v0_1.sh  refresh_sota_checklist.py  required_bench_plan_runs.py  risk_coverage_fixture_dirs.py  run_adversary_search_action.py  run_adversary_search_prompt.py  run_all_coordination_methods_smoke.py  run_all_methods_prime_live_full.py  run_all_methods_prime_live_smoke.py  run_benchmarking_layer1_sanity.ps1  run_benchmarking_layer1_sanity.sh  run_benchmarking_layer2_coverage.ps1  run_benchmarking_layer2_coverage.sh  run_benchmarking_layer3_scale.ps1  run_benchmarking_layer3_scale.sh  run_envelope_per_method.py  (+28 more)
site/: 404.html  index.html  objects.inv  search.html  sitemap.xml
tests/: __init__.py  conftest.py  network_guard.py  test_action_proposal.py  test_adversarial_detector_unit.py  test_adversary_search_prompt.py  test_adversary_task_smoke.py  test_agent_capabilities.py  test_agent_driven_driver.py  test_agent_plugin.py  test_allowed_actions_payload.py  test_always_step_timing.py  test_approval_hook.py  test_artifact_safety.py  test_auction_respects_rbac.py  test_backward_compat.py  test_benchmark_presentation_pipeline.py  test_benchmark_smoke.py  test_bid_spoof_detection.py  test_blackboard_replay_determinism.py  test_build_benchmark_report.py  test_bundle_bidding.py  test_capabilities_vocab.py  test_card_fingerprint_stable.py  test_catalogue.py  test_cli_smoke_matrix.py  test_clock_skew_reproducible.py  test_commit_reveal.py  test_consensus_paxos_lite_sota.py  test_context_builder.py  test_coord_injections_llm.py  test_coord_llm_agentic_smoke.py  test_coord_llm_auction_bidder_smoke.py  test_coord_llm_central_planner_smoke.py  test_coord_llm_debate_smoke.py  (+220 more)
(+5793 files in other folders)
