[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labtrust-gym"
version = "0.1.0"
description = "Multi-agent environment for a self-driving hospital lab (PettingZoo/Gym style) with trust skeleton."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "LabTrust-Gym contributors" }]
maintainers = [{ name = "LabTrust-Gym contributors" }]
keywords = [
    "gym",
    "multi-agent",
    "hospital-lab",
    "trust",
    "policy",
    "simulation",
    "pettingzoo",
    "gymnasium",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0"]
# PettingZoo Parallel API wrapper; install with: pip install -e ".[env]"
env = ["pettingzoo>=1.24", "gymnasium>=0.29"]
# Plotting pipeline for study outputs; install with: pip install -e ".[plots]"
plots = ["matplotlib>=3.7"]
# PPO/MARL baselines; install with: pip install -e ".[marl]"
marl = ["stable-baselines3>=2.0", "gymnasium>=0.29"]
# Documentation site; install with: pip install -e ".[docs]"
docs = ["mkdocs>=1.5", "mkdocstrings[python]>=0.24"]
# Live OpenAI backend (Structured Outputs); install with: pip install -e ".[llm_openai]"
# Base install remains unchanged; no network calls without this extra.
llm_openai = ["openai>=1.40"]
# Live Anthropic backend (future); install with: pip install -e ".[llm_anthropic]"
llm_anthropic = []
# Online serve mode (rate limiting, auth, etc.); stdlib-only by default; add deps here if needed
online = []

[project.scripts]
labtrust = "labtrust_gym.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

# Policy files (emits, schemas, zones, etc.). For release wheels, copy repo policy/ into src/labtrust_gym/policy before building.
[tool.setuptools.package-data]
labtrust_gym = ["policy/**"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
