[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-plugin"
version = "0.1.0"
description = "Minimal LabTrust-Gym extension example: one custom task."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "labtrust-gym[env]",
]

[project.entry-points."labtrust_gym.tasks"]
example_task = "example_plugin.tasks:ExampleTask"

[tool.setuptools.packages.find]
where = ["src"]
